err/django-telegram.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_jsonfield-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/django_telegram-0.1.0.egg-info'...
Listing './lib/python3.5/site-packages/jsonfield'...
Listing './lib/python3.5/site-packages/jsonfield/templatetags'...
Listing './lib/python3.5/site-packages/jsonfield/tests'...
Listing './lib/python3.5/site-packages/jsonfield/tests/jsonfield_test_app'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/telegram'...
Listing './lib/python3.5/site-packages/telegram/handlers'...
Compiling './lib/python3.5/site-packages/telegram/handlers/dummy.py'...
***   File "./lib/python3.5/site-packages/telegram/handlers/dummy.py", line 7
    print 'Channel: %s' % self.telegram.channel.name
                      ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/telegram/management'...
Listing './lib/python3.5/site-packages/telegram/management/commands'...
Listing './lib/python3.5/site-packages/telegram/utils'...
Listing './share'...
Listing './share/python-wheels'...
